        PR tree-optimization/26197         * tree-ssa-alias.c (new_type_alias): Takes additional argument. Calls         get_ref_base_and_extent and overlap_subvar to add only relevant         subvars as may-aliases.         (add_may_alias_for_new_tag): New function, factored out of         new_type_alias.         * tree-vect-transform.c (vect_create_data_ref_ptr): Call new_type_alias         with additional argument.         * tree-flow.h (new_type_alias): Takes additional argument.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116060 138bc75d-0d04-0410-961f-82ee72b054a4